<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#010147"
    tools:context="com.example.studentexpensetracker.DashboardActivity">


    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_expense_value"
        android:background="#FFFFFF"
        android:paddingBottom="10dp"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editLocationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextName"
        android:layout_marginTop="14dp"
        android:background="#FFFFFF"
        android:hint="@string/enter_location_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingBottom="10dp" />

    <Button
        android:id="@+id/buttonAddExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editLocationName"
        android:layout_marginTop="24dp"
        android:background="#6363E6"
        android:text="@string/add"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/totalExpensesView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonAddExpense"
        android:layout_marginTop="46dp"
        android:background="#D0D0D0"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/total_expenses"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/totalExpensesView"
        android:text="@string/expense_explanation"
        android:textAlignment="center" />

    <ListView
        android:id="@+id/listViewAuthors"
        android:layout_width="wrap_content"
        android:layout_height="432dp"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="-11dp"
        android:background="#D0D0D0"
        android:textColor="#000000" />

</RelativeLayout>